include a Util file with clamp and integral

--- a/spec/ventilator-spec.cabal
+++ b/spec/ventilator-spec.cabal
@@ -24,6 +24,7 @@ executable spec
                        Redundancy
                        Sensors
                        Time
+                       Util
                        Ventilator
   -- other-extensions:
   build-depends:       base >=4.12 && <4.13,
