--- a/spec/ventilator-spec.cabal
+++ b/spec/ventilator-spec.cabal
@@ -21,14 +21,17 @@ executable spec
   other-modules:       CMV
                        Controls
                        Cycle
+                       Kinematics
+                       Motor
                        Redundancy
                        Sensors
                        Time
                        Util
                        Ventilator
   -- other-extensions:
-  build-depends:       base >=4.12 && <4.13,
+  build-depends:       base >=4.12 && <4.14,
                        copilot,
                        copilot-c99
   hs-source-dirs:      src
   default-language:    Haskell2010
+  ghc-options:         -fwarn-unused-imports
