--- a/spec/ventilator-spec.cabal
+++ b/spec/ventilator-spec.cabal
@@ -7,7 +7,7 @@ version:             0.1.0.0
 -- synopsis:
 -- description:
 -- bug-reports:
--- license:
+license:             BSD3
 license-file:        LICENSE
 author:              Alexander Vieth
 maintainer:          aovieth@gmail.com
@@ -16,9 +16,8 @@ maintainer:          aovieth@gmail.com
 build-type:          Simple
 extra-source-files:  CHANGELOG.md
 
-executable spec
-  main-is:             Main.hs
-  other-modules:       CMV
+library
+  exposed-modules:     CMV
                        Controls
                        Cycle
                        Kinematics
@@ -28,10 +27,15 @@ executable spec
                        Time
                        Util
                        Ventilator
-  -- other-extensions:
-  build-depends:       base >=4.12 && <4.14,
+  build-depends:       base >= 4.12 && <4.14,
                        copilot,
                        copilot-c99
-  hs-source-dirs:      src
+  hs-source-dirs:      src/lib
   default-language:    Haskell2010
-  ghc-options:         -fwarn-unused-imports
+
+executable generate-c
+  main-is:             Main.hs
+  build-depends:       base >=4.12 && <4.14,
+                       ventilator-spec
+  hs-source-dirs:      src/exe
+  default-language:    Haskell2010
