--- a/spec/ventilator-spec.cabal
+++ b/spec/ventilator-spec.cabal
@@ -7,7 +7,7 @@ version:             0.1.0.0
 -- synopsis:
 -- description:
 -- bug-reports:
-license:             BSD3
+license:             MIT
 license-file:        LICENSE
 author:              Alexander Vieth
 maintainer:          aovieth@gmail.com
